fixed spacing on blank h2 div

--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,7 @@
 h1, h2 {
   margin: 0;
 }
+
+.blankH2 {
+  height: 2.2em;
+}
